Assignment 1.1 fix bug

--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -5,7 +5,7 @@
     <title>Assignment 01</title>
     <meta name="robots" content="noindex"/>
 
-    <link rel="stylesheet" href="csstyles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
             <!--					<h2 class="section-title">Digital CV</h2>-->
             <div class="more-info">
                 <div class="section-content">
-                    <div id="name"><h1>Nguyễn Văn A</h1></div>
+                    <div id="name"><h1>Nguyễn Văn Vượng</h1></div>
                     <div class="info-details">
                         <div class="label"><p>Ngày sinh</p></div>
-                        <div class="details"><p>19/05/2000</p></div>
+                        <div class="details"><p>09/08/1996</p></div>
                     </div>
                     <div class="info-details">
                         <div class="label"><p>Giới tính</p></div>
@@ -26,11 +26,11 @@
                     </div>
                     <div class="info-details">
                         <div class="label"><p>Điện thoại</p></div>
-                        <div class="details"><p>(+84) 912398xxx</p></div>
+                        <div class="details"><p>(+84) 347 545 020</p></div>
                     </div>
                     <div class="info-details">
                         <div class="label"><p>Email</p></div>
-                        <div class="details"><p>sinhvien@funix.edu.vn</p></div>
+                        <div class="details"><p>vuongnvfx31745@funix.edu.vn</p></div>
                     </div>
                     <div class="info-details">
                         <div class="label"><p>Địa chỉ</p></div>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="info-details">
                         <div class="label"><p>Website</p></div>
-                        <div class="details"><p>https://abc.tech</p></div>
+                        <div class="details"><p>https://www.facebook.com/Vuong.Fly/</p></div>
                     </div>
                 </div>
             </div>
@@ -92,8 +92,7 @@
                                 <p>Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có.</p>
                             </li>
                             <li>
-                                <p>Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer,
-                                    NoSQL, ...) và viết được các câu truy vấn.</p>
+                                <p>Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer,NoSQL, ...) và viết được các câu truy vấn.</p>
                             </li>
                             <li>
                                 <p>Sử dụng ngôn ngữ server-side (Python, Java, ...) để xây dựng các Web Server</p>
@@ -102,7 +101,7 @@
                     </li>
                 </ul>
                 <ul>
-                    <li class="time-range"><p>05/2022 - Hiện tại</p></li>
+                    <li class="time-range"><p>06/2021 - 04/2022</p></li>
                     <li class="content-details">
                         <p>Công ty X</p>
                         <p>Web Designerr</p>
@@ -274,9 +273,9 @@
             <h2 class="section-title">Liên hệ</h2>
             <div class="section-content">
                 <ol>
-                    <li><a href="https://www.facebook.com/">Facebook</a></li>
+                    <li><a href="https://www.facebook.com/Vuong.Fly/">Facebook</a></li>
                     <li><a href="https://www.linkedin.com/">Linkedin</a></li>
-                    <li><a href="https://github.com/">Github</a></li>
+                    <li><a href="https://github.com/vuongfly">Github</a></li>
                 </ol>
             </div>
         </div>
