--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>Assignment 01</title>
+	<title>Assignment 02</title>
 	<meta name="robots" content="noindex"/>
 
-	<link rel="stylesheet" href="css/styles.css"/>
+	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 <div class="cv-document">
+	<div class="banner-container">
+		<img class="banner-img" src="images/banner.jpg" alt="banner image">
+		<div class="abs-centered">
+			<h1 class="name">Nguyễn Văn Vượng</h1>
+			<p class="job-desc">Full stack developer</p>
+		</div>
+	</div>
+	<div id="nav-bar">
+		<div class="nav-bar-item">
+			<p><i class="fa-solid fa-user"></i>Thông tin</p>
+		</div>
+		<div class="nav-bar-item">
+			<p>Lý Lịch</p>
+		</div>
+		<div>
+			<h1>Nguyễn Văn Vượng</h1>
+			<p class="job-desc">Full stack developer</p>
+		</div>
+		<div class="nav-bar-item">
+			<p>Chứng chỉ</p>
+		</div>
+		<div class="nav-bar-item">
+			<p>Dự án</p>
+		</div>
+	</div>
 	<div class="cv-page">
 		<div class="section" id="info">
 			<!--					<h2 class="section-title">Digital CV</h2>-->
