--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -21,154 +21,241 @@
     <div id="nav-bar">
         <div class="nav-bar-item"><i class="fa-solid fa-user"></i>Thông tin</div>
         <div class="nav-bar-item">Lý Lịch</div>
-        <div class="avatar_1"><img src="images/default-avatar.webp" alt="avatar" srcset=""></div>
+        <div class="avatar"><img src="images/default-avatar.webp" alt="avatar" srcset=""></div>
         <div class="nav-bar-item">Chứng chỉ
         </div>
         <div class="nav-bar-item">Dự án
         </div>
     </div>
     <div class="cv-page">
-        <div class="section" id="info">
-            <div class="more-info">
+
+        <div class="grid-col-2">
+            <div class="section bg-grey" id="target">
+                <h2 class="section-title">Mục tiêu nghề nghiệp</h2>
                 <div class="section-content">
-                    <div id="name">Nguyễn Văn Vượng</div>
-                    <div class="info-details">
-                        <div class="label">Ngày sinh</div>
-                        <div class="details">09/08/1996</div>
-                    </div>
-                    <div class="info-details">
-                        <div class="label">Giới tính</div>
-                        <div class="details">Nam</div>
-                    </div>
-                    <div class="info-details">
-                        <div class="label">Điện thoại</div>
-                        <div class="details">(+84) 347 545 020</div>
-                    </div>
-                    <div class="info-details">
-                        <div class="label">Email</div>
-                        <div class="details">vuongnvfx31745@funix.edu.vn</div>
-                    </div>
-                    <div class="info-details">
-                        <div class="label">Địa chỉ</div>
-                        <div class="details">Hà Nội, Việt Nam</div>
-                    </div>
-                    <div class="info-details">
-                        <div class="label">Website</div>
-                        <div class="details">https://www.facebook.com/Vuong.Fly/</div>
-                    </div>
+                    Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ
+                    đi
+                    làm việc với vị trí Fullstack Developer, có thể vận dụng những kiến thức đã được trau dồi và không
+                    ngừng học hỏi phát triển bản thân, cũng như hoàn thành tốt nhất công việc được giao.
                 </div>
             </div>
-            <div class="avatar">
-                <img src="images/default-avatar.webp" alt="avatar" srcset="">
-            </div>
-        </div>
 
-        <div class="section" id="target">
-            <h2 class="section-title">Mục tiêu nghề nghiệp</h2>
-            <div class="section-content">
-                Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ đi
-                làm việc với vị trí Fullstack Developer, có thể vận dụng những kiến thức đã được trau dồi và không
-                ngừng học hỏi phát triển bản thân, cũng như hoàn thành tốt nhất công việc được giao.
-            </div>
-        </div>
-
-        <div class="section" id="education">
-            <h2 class="section-title">Học vấn</h2>
-            <div class="section-content">
-                <div class="education-item">
-                    <div class="time-range">06/2021 - 05/2022</div>
-                    <div class="content-details">
-                        FUNix
-                        Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack.
-                        GPA: 9 / 10
-                    </div>
-                </div>
-                <div class="education-item">
-                    <div class="time-range">08/2016 - 07/2019</div>
-                    <div class="content-details">
-                        Cử nhân-ĐH FPT
-                        Chuyên ngành: Kỹ thuật phần mềm.
-                        GPA: 3.2 / 4
-                    </div>
+            <div class="section bg-light-grey" id="info">
+                <h2 class="section-title">Nguyễn Văn Vượng</h2>
+                <div class="info-content">
+                    <!--                    -->
+                    <div class="label">Ngày sinh</div>
+                    <div>09/08/1996</div>
+                    <div class="label">Giới tính</div>
+                    <div>Nam</div>
+                    <div class="label">Điện thoại</div>
+                    <div>(+84) 347 545 020</div>
+                    <div class="label">Email</div>
+                    <div>vuongnvfx31745@funix.edu.vn</div>
+                    <div class="label">Địa chỉ</div>
+                    <div>Hà Nội, Việt Nam</div>
+                    <div class="label">Website</div>
+                    <div>https://www.facebook.com/Vuong.Fly/</div>
                 </div>
             </div>
         </div>
 
+        <div class="grid-col-3">
+            <div class="section">
+                <div class="section-title">
+                    <span>Kinh nghiệm</span>
+                    <span>icon</span>
+                </div>
+                <div class="section-content-1">
+                    <div>Icon</div>
+                    <div class="exp-item">
+                        <span class="item-title">Full Stack Developer - Công ty Y</span> <br>
+                        <span class="time-range">05/2022 - <span class="now">Hiện tại</span></span>
+                        <ul>
+                            <li>Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có.</li>
+                            <li>Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer, NoSQL,
+                                ...) và viết được các câu truy vấn.
+                            </li>
+                            <li>Sử dụng ngôn ngữ server-side (Python, Java, ...) để xây dựng các Web Server</li>
+                        </ul>
+                    </div>
 
-        <div class="section" id="experience">
-            <h2 class="section-title">Kinh nghiệm làm việc</h2>
-            <div class="section-content">
-                <div class="experience-item">
-                    <div class="time-range">05/2022 - Hiện tại</div>
-                    <div class="content-details">
-                        Công ty Y
-                        Full Stack Developer
-                        <div class="sub-details">
-                            Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có.
-                            Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer, NoSQL,
-                            ...) và viết được các câu truy vấn.
-                            Sử dụng ngôn ngữ server-side (Python, Java, ...) để xây dựng các Web Server
-                        </div>
+                    <div>Icon</div>
+                    <div class="exp-item">
+                        <span class="item-title">Web Designer - Công ty X</span> <br>
+                        <span class="time-range">06/2021 - 04/2022</span>
+                        <ul>
+                            <li>Thiết kế Website dựa trên yêu cầu của khách hàng.</li>
+                            <li>Sử dụng các công cụ: Figma, Canva, PTS.</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="experience-item">
-                    <div class="time-range">06/2021 - 04/2022</div>
-                    <div class="content-details">
-                        Công ty X
-                        Web Designer
-                        <div class="sub-details">
-                            Thiết kế Website dựa trên yêu cầu của khách hàng.
-                            Sử dụng các công cụ: Figma, Canva, PTS.
-                        </div>
+            </div>
+
+            <div class="section">
+                <div class="section-title">
+                    <span>Học vấn</span>
+                    <span>icon</span>
+                </div>
+                <div class="section-content-1">
+                    <div>Icon</div>
+                    <div class="edu-item">
+                        <span class="item-title">FUNix</span> <br>
+                        <span class="time-range">06/2021 - 05/2022</span> <br>
+                        <ul>
+                            <li>Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack.</li>
+                            <li>GPA: 9 / 10</li>
+                        </ul>
+                    </div>
+
+                    <div>Icon</div>
+                    <div class="edu-item">
+                        <span class="item-title">Cử nhân-ĐH FPT</span> <br>
+                        <span class="time-range">08/2016 - 07/2019</span> <br>
+                        <ul>
+                            <li>Chuyên ngành: Kỹ thuật phần mềm.</li>
+                            <li>GPA: 3.2 / 4</li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="section">
+                <div class="section-title">
+                    <span>Hoạt động</span>
+                    <span>icon</span>
+                </div>
+                <div class="section-content-1">
+                    <div>Icon</div>
+                    <div class="act-item">
+                        <span class="item-title">FPT Edu Hackathon 2019</span><br>
+                        <span class="time-range">03/2019 - 05/2019</span><br>
+                        <ul>
+                            <li>Giải 3 bảng A</li>
+                            <li>Đề tài: Trang web về phân loại rác thải.</li>
+                        </ul>
+                    </div>
+
+                    <div>Icon</div>
+                    <div class="activity-item">
+                        <span class="item-title">Câu lạc bộ Z</span><br>
+                        <span class="time-range">08/2016 - 08/2017</span>br
+                        <ul>
+                            <li>Trưởng ban chuyên môn.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="section">
+                <div class="section-title">Sở thích</div>
+                <div class="hobby">
+                    <div class="hobby-icon">icon</div>
+                    <div class="hobby-icon">icon</div>
+                    <div class="hobby-icon">icon</div>
+                    <div class="hobby-icon">icon</div>
+                    <div>Âm nhạc</div>
+                    <div>Chơi game</div>
+                    <div>Du lịch</div>
+                    <div>Nấu ăn</div>
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-title">Ngôn ngữ</div>
+                <div class="language pd-10">
+                    <div class="language-item">
+                        <span>Tiếng Anh - IELTS 7.0</span><br>
+                        <span class="blue-line"></span>
+                        <span class="blue-line"></span>
+                        <span class="grey-line"></span>
+                    </div>
+                    <div class="language-item">
+                        <span>Tiếng Nhật - N4</span><br>
+                        <span class="blue-line"></span>
+                        <span class="grey-line"></span>
+                        <span class="grey-line"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-title">Kỹ năng</div>
+                <div class="language pd-10">
+                    <div class="language-item">
+                        <span>HTML/CSS: Fundamental</span><br>
+                        <span class="blue-line"></span>
+                        <span class="grey-line"></span>
+                        <span class="grey-line"></span>
+                    </div>
+                    <div class="language-item">
+                        <span>Javascript: Intermediate</span><br>
+                        <span class="blue-line"></span>
+                        <span class="blue-line"></span>
+                        <span class="grey-line"></span>
+                    </div>
+                    <div class="language-item">
+                        <span>NodeJS: Intermediate</span><br>
+                        <span class="blue-line"></span>
+                        <span class="blue-line"></span>
+                        <span class="grey-line"></span>
+                    </div>
+                    <div class="language-item">
+                        <span>Bootstrap 5: Fundamental </span><br>
+                        <span class="blue-line"></span>
+                        <span class="grey-line"></span>
+                        <span class="grey-line"></span>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="section" id="activity">
-            <h2 class="section-title">Hoạt động</h2>
-            <div class="section-content">
-                <div class="activity-item">
-                    <div class="time-range">03/2019 - 05/2019</div>
-                    <div class="content-details">
-                        FPT Edu Hackathon 2019
-                        Giải 3 bảng A
-                        Đề tài: Trang web về phân loại rác thải.
+        <div class="certi-container bg-grey">
+            <div class="section-title">Chứng chỉ - Giải thưởng</div>
+            <div class="grid-col-2">
+                <div class="certi-item">
+                    <div class="certi-content">
+                        <img src="images/Cert_DBI.png" alt="">
+                    </div>
+                    <div class="certi-content">
+                        <p class="certi-name">Chứng chỉ lập trình web - funix</p>
+                        <ul>
+                            <li>Chứng chỉ thuộc chương trình CCDN</li>
+                            <li>GPA: 8.6</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="activity-item">
-                    <div class="time-range">08/2016 - 08/2017</div>
-                    <div class="content-details">
-                        Câu lạc bộ Z
-                        Trưởng ban chuyên môn.
+                <div class="certi-item">
+                    <div class="certi-content">
+                        <img src="images/Cert_PRF.png" alt="">
+                    </div>
+                    <div class="certi-content">
+                        <p class="certi-name">Chứng chỉ lập trình javascript - funix</p>
+                        <ul>
+                            <li>Chứng chỉ thuộc chương trình CCDN</li>
+                            <li>GPA: 8.6</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="certi-item">
+                    <div class="certi-content">
+                        <img src="images/Cert_WEB.png" alt="">
+                    </div>
+                    <div class="certi-content">
+                        <p class="certi-name">Chứng chỉ thiết kế database  - funix</p>
+                        <ul>
+                            <li>Chứng chỉ thuộc chương trình CCDN</li>
+                            <li>GPA: 8.6</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="section" id="skill">
-            <h2 class="section-title">Kỹ năng</h2>
-            <div class="section-content">
-                <div class="skill-item">
-                    <div class="skill">HTML/CSS</div>
-                    <div class="skill-lvl">Fundamental</div>
-                </div>
-                <div class="skill-item">
-                    <div class="skill">Javascript</div>
-                    <div class="skill-lvl">Intermediate</div>
-                </div>
-                <div class="skill-item">
-                    <div class="skill">NodeJS</div>
-                    <div class="skill-lvl">Intermediate</div>
-                </div>
-                <div class="skill-item">
-                    <div class="skill">Bootstrap</div>
-                    <div class="skill-lvl">Fundamental</div>
-                </div>
-            </div>
-        </div>
-
-        <div class="section" id="certificate">
+        <div class="section">
             <h2 class="section-title">Chứng nhận - Giải thưởng</h2>
             <div class="section-content">
                 <div class="certificate-item">
@@ -182,20 +269,7 @@
             </div>
         </div>
 
-
-        <div class="section" id="hobby">
-            <h2 class="section-title">Sở thích</h2>
-            <div class="section-content">
-                <ul>
-                    <li>Âm nhạc</li>
-                    <li>Chơi game</li>
-                    <li>Du lịch</li>
-                    <li>Nấu ăn</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="section" id="project">
+        <div class="section">
             <h2 class="section-title">Dự án</h2>
             <div class="section-content">
                 <div class="project-info">
@@ -277,7 +351,7 @@
             </div>
         </div>
 
-        <div class="section" id="contact">
+        <div class="section">
             <h2 class="section-title">Liên hệ</h2>
             <div class="section-content">
                 <ol>
