--- a/Assignment 1/cv.html
+++ b/Assignment 1/cv.html
@@ -60,7 +60,7 @@
         <div class="section" id="education">
             <h2 class="section-title">Học vấn</h2>
             <div class="section-content">
-                <div class="education-item">
+                <div class="edu-item">
                     <div class="time-range"><p>06/2021 - 05/2022</p></div>
                     <div class="content-details">
                         <p>FUNix</p>
@@ -68,7 +68,7 @@
                         <p>GPA: 9 / 10</p>
                     </div>
                 </div>
-                <div class="education-item">
+                <div class="edu-item">
                     <div class="time-range"><p>08/2016 - 07/2019</p></div>
                     <div class="content-details">
                         <p>Cử nhân-ĐH FPT</p>
@@ -83,7 +83,7 @@
         <div class="section" id="experience">
             <h2 class="section-title">Kinh nghiệm làm việc</h2>
             <div class="section-content">
-                <div class="experience-item">
+                <div class="exp-item">
                     <div class="time-range"><p>05/2022 - Hiện tại</p></div>
                     <div class="content-details">
                         <p>Công ty Y</p>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="experience-item">
+                <div class="exp-item">
                     <div class="time-range"><p>06/2021 - 04/2022</p></div>
                     <div class="content-details">
                         <p>Công ty X</p>
