Assignment 2, border certi

--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div class="grid-col-3">
+        <div class="grid-col-3 max-width-80">
             <div class="section">
                 <div class="section-title">
                     <span>Kinh nghiệm</span>
@@ -245,7 +245,47 @@
                         <img src="images/Cert_WEB.png" alt="">
                     </div>
                     <div class="certi-content">
-                        <p class="certi-name">Chứng chỉ thiết kế database  - funix</p>
+                        <p class="certi-name">Chứng chỉ thiết kế database - funix</p>
+                        <ul>
+                            <li>Chứng chỉ thuộc chương trình CCDN</li>
+                            <li>GPA: 8.6</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="certi-grid-layout">
+                <div class="certi-item">
+                    <div class="certi-content">
+                        <img src="images/Cert_DBI.png" alt="">
+                    </div>
+                    <div class="certi-content">
+                        <p class="certi-name">Chứng chỉ lập trình web - funix</p>
+                        <ul>
+                            <li>Chứng chỉ thuộc chương trình CCDN</li>
+                            <li>GPA: 8.6</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="certi-border"></div>
+                <div class="certi-item">
+                    <div class="certi-content">
+                        <img src="images/Cert_PRF.png" alt="">
+                    </div>
+                    <div class="certi-content">
+                        <p class="certi-name">Chứng chỉ lập trình javascript - funix</p>
+                        <ul>
+                            <li>Chứng chỉ thuộc chương trình CCDN</li>
+                            <li>GPA: 8.6</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="certi-item">
+                    <div class="certi-content">
+                        <img src="images/Cert_WEB.png" alt="">
+                    </div>
+                    <div class="certi-content">
+                        <p class="certi-name">Chứng chỉ thiết kế database - funix</p>
                         <ul>
                             <li>Chứng chỉ thuộc chương trình CCDN</li>
                             <li>GPA: 8.6</li>
@@ -255,101 +295,93 @@
             </div>
         </div>
 
-        <div class="section">
-            <h2 class="section-title">Chứng nhận - Giải thưởng</h2>
-            <div class="section-content">
-                <div class="certificate-item">
-                    <div class="time-range">2021</div>
-                    <div class="certi">CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</div>
+        <div class="pro-container">
+            <div class="section-title">Dự án</div>
+            <div class="grid-col-3">
+                <div class="pro-item">
+                    <div class="pro-img"><img src="images/project_1.png" alt="project1"></div>
+                    <div class="pro-title flex-row">cv cá nhân</div>
+                    <div class="pro-role flex-row">
+                        <div class="pro-time">2021</div>
+                        <div class="pro-org">Funix</div>
+                        <div class="pro-position">Developer</div>
+                    </div>
+                    <div class="pro-details">
+                        <table>
+                            <tr>
+                                <td>Mô tả</td>
+                                <td>Trang web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ năng nghề
+                                    nghiệp
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Nhiệm vụ</td>
+                                <td> - Phát triển code - Review code - Tối ưu code - Xử lý lỗi</td>
+                            </tr>
+                            <tr>
+                                <td>Công nghệ</td>
+                                <td>HTML, CSS, Javascript</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-                <div class="certificate-item">
-                    <div class="time-range">2021</div>
-                    <div class="certi">CHỨNG CHỈ LẬP TRÌNH JAVASCRIPT - FUNIX</div>
+                <div class="pro-item">
+                    <div class="pro-img"><img src="images/project_2.png" alt="project2"></div>
+                    <div class="pro-title flex-row">Trang web quản lý thú cưng</div>
+                    <div class="pro-role flex-row">
+                        <div class="pro-time">2021</div>
+                        <div class="pro-org">Funix</div>
+                        <div class="pro-position">Developer</div>
+                    </div>
+                    <div class="pro-details">
+                        <table>
+                            <tr>
+                                <td>Mô tả</td>
+                                <td>Ứng dụng giúp quản lý thông tin của thú cưng như: cân nặng, giống, tình trạng tiêm
+                                    chủng,... Bao gồm các chức năng thêm / sửa / xoá.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Nhiệm vụ</td>
+                                <td> - Phát triển code - Review code - Tối ưu code - Xử lý lỗi</td>
+                            </tr>
+                            <tr>
+                                <td>Công nghệ</td>
+                                <td>HTML, CSS, Javascript</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="pro-item">
+                    <div class="pro-img"><img src="images/project_3.png" alt="project3"></div>
+                    <div class="pro-title flex-row">cv cá nhân</div>
+                    <div class="pro-role flex-row">
+                        <div class="pro-time">2021</div>
+                        <div class="pro-org">Funix</div>
+                        <div class="pro-position">Developer</div>
+                    </div>
+                    <div class="pro-details">
+                        <table>
+                            <tr>
+                                <td>Mô tả</td>
+                                <td>Trang web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ năng nghề
+                                    nghiệp
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Nhiệm vụ</td>
+                                <td> - Phát triển code - Review code - Tối ưu code - Xử lý lỗi</td>
+                            </tr>
+                            <tr>
+                                <td>Công nghệ</td>
+                                <td>HTML, CSS, Javascript</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="section">
-            <h2 class="section-title">Dự án</h2>
-            <div class="section-content">
-                <div class="project-info">
-                    <div class="title"><h2>TRANG WEB QUẢN LÝ THÚ CƯNG</h2></div>
-                    <div class="time">2021</div>
-                    <ul>
-                        <li>
-                            <div class="project-lbl">Vị trí:</div>
-                            <div class="project-lbl-info">Developer</div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Mô tả:</div>
-                            <div class="project-lbl-info">Ứng dụng giúp quản lý các thông tin của thú cưng như: Cân
-                                nặng, giống, tình trạng tiêm chủng, ... Bao gồm các chức năng thêm / sửa / xóa.
-                            </div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Nhiệm vụ:</div>
-                            <div class="project-lbl-info">Phát triển, tối ưu code và xử lý lỗi.</div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Công nghệ:</div>
-                            <div class="project-lbl-info">HTML, CSS</div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="section-content">
-                <div class="project-info">
-                    <div class="title"><h2>TRANG WEB XEM TIN TỨC</h2></div>
-                    <div class="time">2021</div>
-                    <ul>
-                        <li>
-                            <div class="project-lbl">Vị trí:</div>
-                            <div class="project-lbl-info">Developer</div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Mô tả:</div>
-                            <div class="project-lbl-info">Trang Web xem tin tức từ nhiều nguồn khác nhau, người dùng
-                                có thể tìm kiếm các tin tức dựa theo cá khóa.
-                            </div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Nhiệm vụ:</div>
-                            <div class="project-lbl-info">Phát triển, tối ưu code và xử lý lỗi.</div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Công nghệ:</div>
-                            <div class="project-lbl-info">HTML, CSS</div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="section-content">
-                <div class="project-info">
-                    <div class="title"><h2>CV CÁ NHÂN</h2></div>
-                    <div class="time">2021</div>
-                    <ul>
-                        <li>
-                            <div class="project-lbl">Vị trí:</div>
-                            <div class="project-lbl-info">Developer</div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Mô tả:</div>
-                            <div class="project-lbl-info">Trang Web CV cá nhân online. Gồm các thông tin cá nhân cũng
-                                như kỹ năng nghề nghiệp.
-                            </div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Nhiệm vụ:</div>
-                            <div class="project-lbl-info">Phát triển, tối ưu code và xử lý lỗi.</div>
-                        </li>
-                        <li>
-                            <div class="project-lbl">Công nghệ:</div>
-                            <div class="project-lbl-info">HTML, CSS</div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
 
         <div class="section">
             <h2 class="section-title">Liên hệ</h2>
