Assignment 2, border certi

--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -215,44 +215,6 @@
 
         <div class="certi-container bg-grey">
             <div class="section-title">Chứng chỉ - Giải thưởng</div>
-            <div class="grid-col-2">
-                <div class="certi-item">
-                    <div class="certi-content">
-                        <img src="images/Cert_DBI.png" alt="">
-                    </div>
-                    <div class="certi-content">
-                        <p class="certi-name">Chứng chỉ lập trình web - funix</p>
-                        <ul>
-                            <li>Chứng chỉ thuộc chương trình CCDN</li>
-                            <li>GPA: 8.6</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="certi-item">
-                    <div class="certi-content">
-                        <img src="images/Cert_PRF.png" alt="">
-                    </div>
-                    <div class="certi-content">
-                        <p class="certi-name">Chứng chỉ lập trình javascript - funix</p>
-                        <ul>
-                            <li>Chứng chỉ thuộc chương trình CCDN</li>
-                            <li>GPA: 8.6</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="certi-item">
-                    <div class="certi-content">
-                        <img src="images/Cert_WEB.png" alt="">
-                    </div>
-                    <div class="certi-content">
-                        <p class="certi-name">Chứng chỉ thiết kế database - funix</p>
-                        <ul>
-                            <li>Chứng chỉ thuộc chương trình CCDN</li>
-                            <li>GPA: 8.6</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
 
             <div class="certi-grid-layout">
                 <div class="certi-item">
@@ -280,6 +242,9 @@
                         </ul>
                     </div>
                 </div>
+                <div class="certi-border horizontal-border"></div>
+<!--                <div class="certi-border"></div>-->
+<!--                <div class="certi-border"></div>-->
                 <div class="certi-item">
                     <div class="certi-content">
                         <img src="images/Cert_WEB.png" alt="">
