--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -6,7 +6,8 @@
     <meta name="robots" content="noindex"/>
 
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -19,12 +20,12 @@
         </div>
     </div>
     <div id="nav-bar">
-        <div class="nav-bar-item"><i class="fa-solid fa-user"></i>Thông tin</div>
-        <div class="nav-bar-item">Lý Lịch</div>
+        <div class="nav-bar-item"><i class="fa-solid fa-user cl-blue-icon"></i>Thông tin</div>
+        <div class="nav-bar-item"><i class="fa-solid fa-file-lines cl-blue-icon"></i>Lý Lịch</div>
         <div class="avatar"><img src="images/default-avatar.webp" alt="avatar" srcset=""></div>
-        <div class="nav-bar-item">Chứng chỉ
+        <div class="nav-bar-item"><i class="fa-solid fa-envelope cl-blue-icon"></i>Chứng chỉ
         </div>
-        <div class="nav-bar-item">Dự án
+        <div class="nav-bar-item"><i class="fa-solid fa-star cl-blue-icon"></i>Dự án
         </div>
     </div>
     <div class="cv-page">
@@ -64,7 +65,7 @@
             <div class="section">
                 <div class="section-title">
                     <span>Kinh nghiệm</span>
-                    <span>icon</span>
+                    <i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="section-content-1">
                     <div>Icon</div>
@@ -95,7 +96,7 @@
             <div class="section">
                 <div class="section-title">
                     <span>Học vấn</span>
-                    <span>icon</span>
+                    <i class="fa-solid fa-pen"></i>
                 </div>
                 <div class="section-content-1">
                     <div>Icon</div>
@@ -124,8 +125,7 @@
 
             <div class="section">
                 <div class="section-title">
-                    <span>Hoạt động</span>
-                    <span>icon</span>
+                    <span>Hoạt động</span><i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="section-content-1">
                     <div>Icon</div>
@@ -153,10 +153,10 @@
             <div class="section">
                 <div class="section-title">Sở thích</div>
                 <div class="hobby">
-                    <div class="hobby-icon">icon</div>
-                    <div class="hobby-icon">icon</div>
-                    <div class="hobby-icon">icon</div>
-                    <div class="hobby-icon">icon</div>
+                    <div class="hobby-icon"><i class="fa-solid fa-music cl-blue-icon"></i></div>
+                    <div class="hobby-icon"><i class="fa-solid fa-chess-knight cl-blue-icon"></i></div>
+                    <div class="hobby-icon"><i class="fa-solid fa-plane cl-blue-icon"></i></div>
+                    <div class="hobby-icon"><i class="fa-solid fa-utensils cl-blue-icon"></i></div>
                     <div>Âm nhạc</div>
                     <div>Chơi game</div>
                     <div>Du lịch</div>
@@ -215,7 +215,6 @@
 
         <div class="certi-container bg-grey">
             <div class="section-title">Chứng chỉ - Giải thưởng</div>
-
             <div class="certi-grid-layout">
                 <div class="certi-item">
                     <div class="certi-content">
@@ -243,8 +242,6 @@
                     </div>
                 </div>
                 <div class="certi-border horizontal-border"></div>
-<!--                <div class="certi-border"></div>-->
-<!--                <div class="certi-border"></div>-->
                 <div class="certi-item">
                     <div class="certi-content">
                         <img src="images/Cert_WEB.png" alt="">
@@ -348,14 +345,15 @@
         </div>
 
 
-        <div class="section">
-            <h2 class="section-title">Liên hệ</h2>
-            <div class="section-content">
-                <ol>
-                    <li><a href="https://www.facebook.com/Vuong.Fly/">Facebook</a></li>
-                    <li><a href="https://www.linkedin.com/">Linkedin</a></li>
-                    <li><a href="https://github.com/vuongfly">Github</a></li>
-                </ol>
+        <div class="contact bg-grey">
+            <div class="contact-item">
+                    <a href="https://www.facebook.com/Vuong.Fly/"><i class="fa-brands fa-facebook cl-blue-icon"></i>Facebook</a>
+            </div>
+            <div class="contact-item">
+                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin cl-blue-icon"></i>Linkedin</a>
+            </div>
+            <div class="contact-item">
+                    <a href="https://github.com/vuongfly"><i class="fa-brands fa-github cl-blue-icon"></i>Github</a>
             </div>
         </div>
     </div>
